# bia-study-stats

./: README.md  bia_study_stats.json  pyproject.toml
bfftrees/biostudies/xz/: S-BIAD-23.pb.xz  S-BIAD1.pb.xz  S-BIAD10.pb.xz  S-BIAD1002.pb.xz  S-BIAD1005.pb.xz  S-BIAD1006.pb.xz  S-BIAD1008.pb.xz  S-BIAD1009.pb.xz  S-BIAD1012.pb.xz  S-BIAD1013.pb.xz  S-BIAD1015.pb.xz  S-BIAD1018.pb.xz  S-BIAD1019.pb.xz  S-BIAD1021.pb.xz  S-BIAD1023.pb.xz  S-BIAD1024.pb.xz  S-BIAD1025.pb.xz  S-BIAD1026.pb.xz  S-BIAD1027.pb.xz  S-BIAD1028.pb.xz  S-BIAD1029.pb.xz  S-BIAD1030.pb.xz  S-BIAD1032.pb.xz  S-BIAD1033.pb.xz  S-BIAD1034.pb.xz  S-BIAD1038.pb.xz  S-BIAD1039.pb.xz  S-BIAD1040.pb.xz  S-BIAD1043.pb.xz  S-BIAD1044.pb.xz  S-BIAD1045.pb.xz  S-BIAD1046.pb.xz  S-BIAD1055.pb.xz  S-BIAD1057.pb.xz  S-BIAD106.pb.xz  S-BIAD1063.pb.xz  S-BIAD1064.pb.xz  S-BIAD1070.pb.xz  S-BIAD1071.pb.xz  S-BIAD1072.pb.xz  (+806 more)
bia_study_stats/: cli.py  get_all_bia_accessions.py  models.py  s3_size_calculator.py  s3_utils.py  web_utils.py
