[project]
name = "bia-stats-from-fire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.36.18",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "typer>=0.15.1",
]

[project.scripts]
bia-study-stats = "bia_study_stats.cli:app"
